k8s/basil-core-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basil-core-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: basil-core
  template:
    metadata:
      labels:
        component: basil-core
    spec:
      containers:
        - name: basil-core
          image: dosatross/basil_dev:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
