k8s/basil-postgres-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: basil-postgres-clusterip
spec:
  type: ClusterIP
  selector:
    component: basil-postgres
  ports:
    - port: 5432
      targetPort: 5432
