k8s/basil-nginx-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basil-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: basil-core-clusterip
              servicePort: 8000
